syntax = "proto3";

package org.apache.jackrabbit.oak.remote;

option java_package = "org.apache.jackrabbit.oak.remote.proto";
option java_outer_classname = "NodeBuilderProtos";

import "node_value.proto";

message NodeBuilderId {
    int64 value = 1;
}

message NodeBuilderPath {
    NodeBuilderId nodeBuilderId = 1;
    string path = 2;
}

message NodeBuilderValue {
    repeated Property property = 1;
    repeated string childName = 2;
    bool exists = 3;
    int32 hashCode = 4;
    bool isNew = 5;
    bool isReplaced = 6;
    bool isModified = 7;
}

message MoveOp {
    NodeBuilderPath nodeBuilderPath = 1;
    NodeBuilderPath newParent = 2;
    string newName = 3;
}
